# terrafedash

./: .gitignore  Pipfile  app.py  main.py  pyproject.toml  requirements.txt  setup.py  setup.sh  utils.py
.streamlit/: config.toml
attached_assets/: adsabril.csv  pedidosabril.csv
main/: __init__.py  app.py
terrafedash/: __init__.py  app.py
