[project]
name = "terrafedash"
version = "0.1.0"
description = "Dashboard de Vendas e Marketing"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "streamlit>=1.45.0",
    "altair>=5.5.0",
    "pydeck>=0.9.1",
    "protobuf>=6.30.2",
    "python-dateutil>=2.9.0",
    "pytz>=2025.2",
    "requests>=2.32.3",
    "tornado>=6.4.2",
    "watchdog>=6.0.0"
]
